Fixed z-index of modal

--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,7 @@ body{
   position:fixed;
   width: 100%;
   height: 100%;
+  z-index: 10;
   top: 0;
   left: 0;
   display: none;
